--- a/covid-tracker/src/App.css
+++ b/covid-tracker/src/App.css
@@ -44,4 +44,39 @@
   border-radius: 10px;
   margin: 10px;
   padding: 10;
+  background-color: orange;
+  text-align: center ;
+  width: 200px;
+  height: 150px;
+}
+.card1-container {
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10;
+  background-color:palevioletred;
+  text-align: center ;
+  width: 200px;
+  height: 150px;
+}
+.card2-container {
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10;
+  background-color:greenyellow;
+  text-align: center ;
+  width: 200px;
+  height: 150px;
+
+}
+
+.card{
+  display: flex;
+justify-content: center;
+
 }
